# spruce

./: .gitignore  CHANGELOG.md  LICENSE  README.md  find_center.sh  pyproject.toml  spruce.py  spruce_co.py
spruce/: spruce.py
spruce.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/data/plectrophenax_hyperboreus_uce/: uce-1003_ALL_buntings_assembled_contigs.fa  uce-1004_ALL_buntings_assembled_contigs.fa  uce-1010_ALL_buntings_assembled_contigs.fa  uce-1013_ALL_buntings_assembled_contigs.fa  uce-1026_ALL_buntings_assembled_contigs.fa  uce-102_ALL_buntings_assembled_contigs.fa  uce-1034_ALL_buntings_assembled_contigs.fa  uce-1038_ALL_buntings_assembled_contigs.fa  uce-1041_ALL_buntings_assembled_contigs.fa  uce-1047_ALL_buntings_assembled_contigs.fa  uce-1051_ALL_buntings_assembled_contigs.fa  uce-1052_ALL_buntings_assembled_contigs.fa  uce-1053_ALL_buntings_assembled_contigs.fa  uce-1055_ALL_buntings_assembled_contigs.fa  uce-1060_ALL_buntings_assembled_contigs.fa  uce-1062_ALL_buntings_assembled_contigs.fa  uce-1063_ALL_buntings_assembled_contigs.fa  uce-1064_ALL_buntings_assembled_contigs.fa  uce-1065_ALL_buntings_assembled_contigs.fa  uce-1077_ALL_buntings_assembled_contigs.fa  uce-1081_ALL_buntings_assembled_contigs.fa  uce-1093_ALL_buntings_assembled_contigs.fa  uce-1094_ALL_buntings_assembled_contigs.fa  uce-1101_ALL_buntings_assembled_contigs.fa  uce-1102_ALL_buntings_assembled_contigs.fa  uce-111_ALL_buntings_assembled_contigs.fa  uce-1121_ALL_buntings_assembled_contigs.fa  uce-1126_ALL_buntings_assembled_contigs.fa  (+1790 more)
(+1613 files in other folders)
