[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spruce"
version = "0.2.0"
description = "SPrUCE: Ultraconserved Element diversity estimation using Gompertz modeling"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Daira Melendez" }]
license = { text = "BSD-3-Clause" }

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "biopython"
]

[project.scripts]
spruce = "spruce.spruce:main"

